# cutting

./: .gitignore  Cargo.toml
examples/: basic_usage.rs
src/: constants.rs  error.rs  lib.rs  main.rs  types.rs  utils.rs  visualization.rs
src/cli/: args.rs  commands.rs  mod.rs  progress.rs
src/comparator/: mod.rs  optimization.rs  priority_list_factory.rs  solution_comparator_enum.rs  solution_comparator_factory.rs  solution_comparators.rs  solution_sorting_trait.rs
src/engine/: arrangement.rs  cutting.rs  edge_banding.rs  logger.rs  mod.rs  permutation.rs  progress.rs  running_tasks.rs  service.rs  service_impl.rs  tasks.rs  thread.rs  utils.rs  watch_dog.rs  watchdog.rs
src/engine/comparator/: area.rs  center_mass.rs  cuts.rs  discrepancy.rs  factory.rs  mod.rs  mosaics.rs  optimization.rs  panel_area.rs  priority.rs  solution_comparators.rs  tiles.rs
src/engine/cut_list_thread/: basic_impls.rs  computation_impls.rs  core_computation.rs  cutting_strategies.rs  execution_impls.rs  getters_setters.rs  mod.rs  structs.rs  tile_fitting.rs  validation.rs
src/engine/model/: cut.rs  mod.rs  mosaic.rs  request.rs  response.rs  tile.rs  (+2 more)
src/errors/: core.rs
src/logging/: enums.rs  init.rs  macros.rs  mod.rs  structs.rs
src/models/: configuration.rs  mod.rs  stats.rs  tile.rs
src/stock/: constants.rs  mod.rs
src/utils/: arrangement.rs  edge_banding.rs  math.rs  mod.rs  timing.rs
tests/: cut_thickness_tests.rs  integration_tests.rs  lib.rs  mosaic_tests.rs  multiple_stock_panel_id_tests.rs  multiple_stock_tests.rs  service_tests.rs  stage2_mosaic_tests.rs  stage4_solution_tests.rs  stage5_comparator_tests.rs  stage6_permutation_tests.rs  stage7_edge_cases.rs  stage7_performance_tests.rs  stage7_service_tests.rs
tests/comparator/: factory_tests.rs  mod.rs  solution_comparator_tests.rs
tests/engine/: collection_utils_tests.rs  cut_list_thread_tests.rs  debug_comprehensive_test.rs  debug_single_thread_tests.rs  decimal_place_counter_tests.rs  errors_tests.rs  mod.rs  permutation_utils_tests.rs  running_tasks_singleton_tests.rs  running_tasks_tests.rs  service_core_fixed_tests.rs  service_decimal_places_tests.rs  service_impl_tests.rs  service_integration_tests.rs  service_tests.rs  stock_solution_tests.rs  watch_dog_cleanup_tests.rs  watch_dog_core_tests.rs  watch_dog_monitoring_tests.rs  watch_dog_statistics_tests.rs  watch_dog_tests.rs
tests/enums/: mod.rs  status_code_tests.rs
tests/logging/: enums_tests.rs  init_tests.rs  macros_tests.rs  mod.rs  structs_tests.rs
tests/models/: calculation_request_tests.rs  calculation_response_tests.rs  calculation_submission_result_tests.rs  cut_tests.rs  edge_tests.rs  final_tile_tests.rs  grouped_tile_dimensions_tests.rs  mod.rs  mosaic_tests.rs  no_fit_tile_tests.rs  panel_struct_tests.rs  panel_tests.rs  performance_thresholds_tests.rs  solution_tests.rs  stats_tests.rs  task_status_response_tests.rs  task_tests.rs  tile_dimensions_tests.rs  tile_node_tests.rs  tile_tests.rs
tests/stock/: mod.rs  stock_panel_picker_compatibility_tests.rs  stock_panel_picker_tests.rs  stock_solution_generator_tests.rs  stock_solution_tests.rs
tests/utils/: arrangement_tests.rs  edge_banding_tests.rs  math_tests.rs  mod.rs  timing_tests.rs  utils_tests.rs
(+134 files in other folders)
