[package]
name = "cutlist-optimizer-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <email@example.com>"]
description = "CLI tool for optimizing material cutting layouts"
license = "MIT"

[[bin]]
name = "cutlist"
path = "src/main.rs"

[dependencies]
# CLI & Async
clap = { version = "4.5.40", features = ["derive", "color"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0.98"
thiserror = "2.0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Logging & Progress
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"

# Math & Algorithms
num-traits = "0.2.19"
rayon = "1.10.0"

# Optional: Performance monitoring
mimalloc = { version = "0.1.47", optional = true }
num_cpus = "1.17.0"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
tempfile = "3.20.0"
assert_cmd = "2.0"
predicates = "3.1.3"

[features]
default = []
fast-alloc = ["dep:mimalloc"]

# [[bench]]
# name = "optimization_benchmark"
# harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
